# cgisysinfo

./: .gitignore  .hgignore  Makefile.am  NEWS  README  README.md  bootstrap.sh  configure.ac
src/: Makefile.am  filesystem.c  filesystem.h  main.c  memory.c  memory.h  network.c  network.h  output.c  output.h  system.c  system.h  utils.c  utils.h
